<resources>
    <string name="app_name">Animal Finder</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- MENU STRINGS -->
    <string name="action_logout">Logout</string>
    <string name="action_info">Info</string>
    <string name="action_delete">Delete Fence</string>

    <!-- FRAGMENTOS -->
    <string name="fragment_map">Map</string>
    <string name="fragment_animals">Animals</string>
    <string name="fragment_route">Routes</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- INFORMAÇÃO -->
    <string name="animal_info">Animal Finder Information</string>
    <string name="nelsonOwner_info">Nelson Rodrigues 16921</string>
    <string name="helderOwner_info">Helder Ferreira 16935</string>
    <string name="escola_info">IPVC - ESTG</string>
    <string name="professora_info">Prof. Sara Paiva</string>
    <string name="ano_info">2016/2017</string>

</resources>
